--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.datasource.url=jdbc:sqlserver://192.168.175.241;databaseName=VMS;encrypt=
 spring.datasource.username=sa
 spring.datasource.password=rkpms@rea2018
 
+#spring.datasource.url=jdbc:sqlserver://192.168.208.166:1433;databaseName=VMS;encrypt=true;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=Rea@2023
+
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
